@@ -20,16 +20,35 @@
  */
 
 if (!isset($forMods)) exit('Module not found');
-$indexAdmin = new ModuleAdmin();
+$index_admin = new ModuleAdmin();
 // Display Admin header
 xoops_cp_header();
 // Add module stylesheet
 $xoTheme->addStylesheet(XOOPS_URL . '/modules/' . $forMods->getVar('dirname') . '/css/admin.css');
 $xoTheme->addStylesheet(XOOPS_URL . '/modules/system/css/admin.css');
 
+$topic_handler = xoops_getmodulehandler('topic', 'fmcontent');
+$content_handler = xoops_getmodulehandler('page', 'fmcontent');
+
+$folder = array(
+	XOOPS_ROOT_PATH . '/uploads/fmcontent/', 
+	XOOPS_ROOT_PATH . '/uploads/fmcontent/img'
+);
+
+$index_admin = new ModuleAdmin();
+$index_admin->addInfoBox(_FMCONTENT_ADMENU1);
+$index_admin->addInfoBox(_FMCONTENT_ADMENU2);
+$index_admin->addInfoBoxLine(_FMCONTENT_ADMENU1, _FMCONTENT_INDEX_TOPICS, $topic_handler->getTopicCount($forMods));
+$index_admin->addInfoBoxLine(_FMCONTENT_ADMENU2, _FMCONTENT_INDEX_CONTENTS, $content_handler->getContentItemCount($forMods));
+
+foreach (array_keys( $folder) as $i) {
+    $index_admin->addConfigBoxLine($folder[$i], 'folder');
+    $index_admin->addConfigBoxLine(array($folder[$i], '777'), 'chmod');
+}
+    
 $xoopsTpl->assign('navigation', 'index');
 $xoopsTpl->assign('navtitle', _FMCONTENT_HOME);
-$xoopsTpl->assign('renderindex', $indexAdmin->renderIndex());
+$xoopsTpl->assign('renderindex', $index_admin->renderIndex());
 
 // Call template file
 echo $xoopsTpl->fetch(XOOPS_ROOT_PATH . '/modules/' . $forMods->getVar('dirname') . '/templates/admin/fmcontent_index.html');
